Adjusted the design of search section and leftbar for display correctly on IE6
git-svn-id: file:///home/svn/repositories/productfromthailand/trunk@54 c5cc9711-2349-4910-810f-657f1504bd7e

--- a/webapp/ecommerce/images/ecommain.css
+++ b/webapp/ecommerce/images/ecommain.css
@@ -463,6 +463,7 @@ font-weight: bold;
 text-decoration:none;
 color:white;
 padding-top:5px;
+text-align:center;
 }
 
 .boxhead_sb {
@@ -600,9 +601,10 @@ margin-left: 5px;
 }
 
 .browsecategorytext{
-font-weight: bold;
+font-weight:700;
 color:#000000;
 margin-top: 5px;
+text-align:left;
 }
 
 A.browsecategorybutton {
